--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,21 @@
 .movie img {
   width: 200px;
 }
+
+.Bar{
+  font-family: 'Oswald', sans-serif;
+  font-size: x-large;
+  background: linear-gradient(to bottom, #202020, #333333);
+  padding: 2rem;
+  transition: all 0.5s ease-in-out;
+  opacity: 1;
+  min-height: 80px;
+}
+
+.Bar.fade-out {
+  opacity: 0;
+}
+.Bar:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+  
+}
