--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ body {
   margin: 0 auto;
   display: block; 
 }
+.movie-poster:hover {
+  box-shadow: 0 0 10px 5px #2890ff;
+}
 
 .my-navbar {
   background-color: #333;
@@ -147,4 +150,16 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
+}
+
+.movie-title {
+  font-size: 28px;
+  color: white;
+  margin-bottom: 10px;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+
+.movie-title:hover {
+  color: #2890ff;
 }
