--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,7 @@ body {
 
 .screening-and-seats {
   text-align: center;
+  min-height: 100vh;
 }
 
 .seats {
@@ -125,6 +126,8 @@ body {
   height: 30px;
   margin: 3px 1px;
   cursor: pointer;
+  justify-content: center;
+  display: flex;
 }
 
 .seats>.row>.selected {
@@ -216,4 +219,9 @@ body {
   
   .categoryButton:hover {
     background-color: #0077c2;
+  }
+
+  .headline{
+    color:white;
+    text-align: center;
   }
